<resources>
    <string name="app_name">1A Gas 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Bibilioteca</string>
    <string name="menu_slideshow">Galería</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_exit">Cerrar Sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Nombre de usuario no valido</string>
    <string name="invalid_password">Su contraseña debe ser > a 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login 1a Gas</string>
    <string name="title_activity_fullscreen_splash">FullscreenActivitySplash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_main_steper">Crear nuevo Servicio</string>
    <string name="tab_text_1">Información Básica</string>
    <string name="tab_text_2">Contrato</string>
    <string name="tab_text_3">Tipo</string>
    <string name="tab_text_4">Estatus</string>
    <string name="tab_text_5">Agendamiento</string>
    <string name="tab_text_6">Resumen</string>


    <string name="name">Nombre/s</string>
    <string name="lastname">Apellidos/s</string>
    <string name="direction">Dirección</string>
    <string name="contrato">No Contrato</string>
    <string name="residencial">RESIDENCIAL</string>
    <string name="industrial">INDUSTRIAL</string>
    <string name="comercial">COMERCIAL</string>
    <string name="todo">TODO</string>
    <string name="inductrial">Inductrial</string>
    <string name="nueva">NUEVA</string>
    <string name="periodica">PERIODICA</string>
    <string name="agendamiento">AGENDAMIENTO</string>
    <string name="ingrese_fecha_y_hora_aqu">Ingrese fecha y hora aquí</string>


</resources>