<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stepper.Step1Fragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#E3E2E2"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DATOS GENERALES DE CLIENTE"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#818181"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="188dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <EditText
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/textLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/textDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direction"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>