<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stepper.Step3Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#E3E2E2"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TIPO DE SERVICIO"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#818181"
                android:textStyle="bold" />
        </LinearLayout>


        <TableLayout
            android:layout_width="392dp"
            android:layout_height="614dp"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TableRow android:gravity="center">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/btnResidecial"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:background="@drawable/circle"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitCenter"
                        android:src="@drawable/hogarvector" />


                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1">


                    <ImageButton
                        android:id="@+id/btnIndustrial"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:background="@drawable/circle"
                        android:contentDescription="@string/inductrial"
                        android:scaleType="fitCenter"
                        android:src="@drawable/industriesvector" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/btnComercial"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:background="@drawable/circle"
                        android:contentDescription="@string/comercial"
                        android:scaleType="fitCenter"
                        android:src="@drawable/comerciovector"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </FrameLayout>
            </TableRow>

            <TableRow>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/residencial" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/industrial" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/comercial" />
                </FrameLayout>

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>