<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stepper.Step4Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#E3E2E2"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TIPO DE REVICIÓN"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#818181"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="1541dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <TableRow android:gravity="center">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/btnNew"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:background="@drawable/circle"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_new"
                        app:tint="@color/blue1a" />


                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_weight="1">


                    <ImageButton
                        android:id="@+id/btnPeriodica"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:background="@drawable/circle"
                        android:contentDescription="@string/inductrial"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_prediodic"
                        app:tint="@color/blue1a" />
                </FrameLayout>
            </TableRow>

            <TableRow>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/nueva" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/periodica" />
                </FrameLayout>


            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>